don't build tests by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,4 +45,10 @@ if(GOTM_USE_NetCDF)
 endif(GOTM_USE_NetCDF)
 
 add_subdirectory(src)
-add_subdirectory(tests)
+add_subdirectory(tests EXCLUDE_FROM_ALL)
+
+include(FeatureSummary)
+if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+   feature_summary(WHAT ENABLED_FEATURES DISABLED_FEATURES PACKAGES_FOUND)
+   feature_summary(FILENAME ${CMAKE_CURRENT_BINARY_DIR}/features.log WHAT ALL)
+endif()
