--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -211,7 +211,7 @@ if(GOTM_USE_FABM)
    if(NOT FABM_SUBMODULE)
       set(EXTERNAL_LIBS ${FABM_LIBRARIES})
       mark_as_advanced(FORCE FABM_PREFIX FABM_BASE)
-   endif(FABM_SUBMODULE)
+   endif(NOT FABM_SUBMODULE)
 endif(GOTM_USE_FABM)
 
 if(NOT GOTM_BUILD_LIBRARIES_ONLY)
